Skip build for pypy
Xref https://conda-forge.org/docs/maintainer/knowledge_base.html#pypy-builds

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [py<36 or osx]
+  skip: true  # [py<36 or osx or python_impl == 'pypy']
   entry_points:
     - pythonfmu = pythonfmu.__main__:cli_main
 
