--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,9 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: 4563a4525aa5b6893ee35a3d369810ea331ba014209d7ec9f60be90eb04fbc93
+  patches:
+    # https://github.com/NTNU-IHB/PythonFMU/pull/187
+    - 0001-Fix-pythonfmu-export-module-on-OSX.patch
 
 build:
   number: 2
