--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,7 @@ source:
 
 build:
   number: 0
+  skip: true # [osx]
   entry_points:
     - pythonfmu = pythonfmu.__main__:cli_main
 
@@ -24,6 +25,7 @@ requirements:
   host:
     - python
     - pip
+    - setuptools
   run:
     - python
 
